# bbexample

./: Makefile.am  autogen.sh  bbexample.bb  bbexample.c  bbexamplelib.c  configure.ac
